# cassie_description

./: CMakeLists.txt
include/cassie_description/: cassie_model.hpp
src/: cassie_model.cpp
